fixed overflowing background on mobile version

--- a/css/main.css
+++ b/css/main.css
@@ -283,10 +283,12 @@ blockquote {
   background-repeat: no-repeat;
   background-size: 100%;
   position: relative;
+  overflow: hidden;
 }
 
 @media (max-width: 991px) {
   #testimonials {
+    background: transparent;
     background-image: url(../img/pexels-eva-bronzini-7640904.jpg);
   }
 }
@@ -301,6 +303,7 @@ blockquote {
   height: 100%;
   background: rgba(20, 70, 80, 0.2);
   position: absolute;
+  overflow: hidden;
   top: 0;
   left: 0;
   right: 0;
